Fix safari help button alignment bug

--- a/src/stylesheets/modules/docs_sidebar.styl
+++ b/src/stylesheets/modules/docs_sidebar.styl
@@ -59,6 +59,8 @@
     border-radius: 22px
     border-color: $colors.blue-dark
     align-items: center
+    user-select: none
+    cursor: pointer
     &-text
       margin-left: 10px
 
